# rosetta-alpha

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  HACKATHON_SUBMISSION_CHECKLIST.md  LICENSE  README.md  SECURITY.md  capture_dashboard.py  codecov.yml  coverage.xml  fix_colors.js  fix_remaining.js  fix_rogue_colors.js  fix_tailwind_colors.js  pyproject.toml  results.json  validate_colors.js
.zed/: settings.json
agents/: __init__.py  base_agent.py  china_agent.py  contagion_monitor.py  crypto_agent.py  eu_agent.py  japan_agent.py  translator_agent.py  us_agent.py
api/: Dockerfile  __init__.py  main.py  pyproject.toml
assets/: media_assets.json
backend/: __init__.py
contracts/: OwnerPriceOracle_verify.json  PredictionMarket_verify.json  README.md  RosettaToken_verify.json  SECURITY_AUDIT.md  foundry.toml  registry_verify.json
data/: __init__.py  akshare_client.py  deepseek_client.py  gemini_client.py  hidden_flow.py  mcp_client.py  stooq_client.py  tushare_client.py  yfinance_client.py
demo/: e2e_run.py
docs/: DEPLOY.md  SPRINT_PLAN.md
frontend/: .env.example  .env.local.example  .gitignore  .npmrc  README.md  SECURITY_AUDIT.md  apply_about_fix.py  apply_dashboard_auth.py  apply_dashboard_auth_fix.py  apply_dashboard_final.py  apply_dashboard_final_v2.py  apply_dashboard_fix.py  apply_dashboard_stats.py  apply_dashboard_update.py  apply_desks_animation.py  apply_final_fixes.py  apply_final_polish.py  apply_final_polish_dashboard.py  apply_final_v5.py  apply_fixes.py  apply_layout_fix.py  apply_nav_auth_fix.py  apply_optical_center.py  apply_perfection.py  apply_ui_fixes.py  apply_ui_fixes2.py  apply_ui_fixes_part3.py  apply_v3.py  auth.ts  fix_all.js  fix_all_clean.js  fix_allweather_chart.py  fix_colors.js  fix_dashboard_ring.py  fix_final.js  fix_final_alignment.js  fix_final_v5.py  fix_responsive.js  fix_ui_final.py  fix_ui_part4.py  (+17 more)
markets/: __init__.py  polymarket_builder.py  question_generator.py
portfolio/: __init__.py  engine.py
reasoning/: __init__.py  arc_recorder.py  hasher.py  (+9 more)
(+219 files in other folders)
